# gami

./: TODO.md  meson.build  shell.nix
src/: canvas.c  canvas.h  canvas3d.c  canvas3d.h  crease.c  crease.h  crease_canvas.c  crease_canvas.h  crease_canvas3d.c  crease_canvas3d.h  main.c  paper.c  paper.h  test_crease.c  window.c  window.h
